--- a/index.html
+++ b/index.html
@@ -1,15 +1,35 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
+    <title>AR.js 3D Model</title>
+
+    <!-- A-Frame -->
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
+
+    <!-- AR.js -->
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/2.2.1/aframe/build/aframe-ar.js"></script>
   </head>
 
-  <body style="margin: 0;">
-    <a-scene embedded arjs>
-      
+  <body style="margin: 0; overflow: hidden;">
+    <a-scene embedded arjs="sourceType: webcam;">
+
+      <!-- Assets -->
+      <a-assets>
+        <a-asset-item
+          id="model"
+          src="https://cdn.aframe.io/test-models/models/box/box.gltf">
+        </a-asset-item>
+      </a-assets>
+
       <!-- Marker -->
       <a-marker preset="hiro">
-        <a-box position="0 0.5 0" material="color: red;"></a-box>
+        <a-entity
+          gltf-model="#model"
+          scale="0.5 0.5 0.5"
+          position="0 0 0"
+          rotation="0 0 0">
+        </a-entity>
       </a-marker>
 
       <!-- Camera -->
