--- a/index.html
+++ b/index.html
@@ -1,40 +1,81 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>AR.js 3D Model</title>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Advanced AR.js Demo</title>
 
-    <!-- A-Frame -->
-    <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
+  <!-- A-Frame -->
+  <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
 
-    <!-- AR.js -->
-    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/2.2.1/aframe/build/aframe-ar.js"></script>
-  </head>
+  <!-- AR.js -->
+  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/2.2.1/aframe/build/aframe-ar.js"></script>
 
-  <body style="margin: 0; overflow: hidden;">
-    <a-scene embedded arjs="sourceType: webcam;">
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+      font-family: Arial, sans-serif;
+    }
 
-      <!-- Assets -->
-      <a-assets>
-        <a-asset-item
-          id="model"
-          src="https://cdn.aframe.io/test-models/models/box/box.gltf">
-        </a-asset-item>
-      </a-assets>
+    #info {
+      position: fixed;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(0,0,0,0.6);
+      color: #fff;
+      padding: 8px 14px;
+      border-radius: 20px;
+      font-size: 14px;
+      z-index: 999;
+    }
+  </style>
+</head>
 
-      <!-- Marker -->
-      <a-marker preset="hiro">
-        <a-entity
-          gltf-model="#model"
-          scale="0.5 0.5 0.5"
-          position="0 0 0"
-          rotation="0 0 0">
-        </a-entity>
-      </a-marker>
+<body>
 
-      <!-- Camera -->
-      <a-entity camera></a-entity>
+<div id="info">Point camera at Hiro marker</div>
 
-    </a-scene>
-  </body>
+<a-scene
+  embedded
+  arjs="sourceType: webcam; debugUIEnabled: false;"
+  renderer="antialias: true; colorManagement: true;"
+>
+
+  <!-- ASSETS -->
+  <a-assets>
+    <a-asset-item
+      id="model"
+      src="https://cdn.aframe.io/test-models/models/RobotExpressive/RobotExpressive.glb">
+    </a-asset-item>
+  </a-assets>
+
+  <!-- MARKER -->
+  <a-marker preset="hiro" smooth="true" smoothCount="10" smoothTolerance="0.01">
+
+    <!-- LIGHTS -->
+    <a-entity light="type: ambient; intensity: 1"></a-entity>
+    <a-entity light="type: directional; intensity: 1.2" position="1 2 1"></a-entity>
+
+    <!-- 3D MODEL -->
+    <a-entity
+      gltf-model="#model"
+      scale="0.4 0.4 0.4"
+      position="0 0 0"
+      rotation="0 180 0"
+      animation="property: rotation;
+                 to: 0 540 0;
+                 loop: true;
+                 dur: 8000;
+                 easing: linear">
+    </a-entity>
+
+  </a-marker>
+
+  <!-- CAMERA -->
+  <a-entity camera></a-entity>
+
+</a-scene>
+
+</body>
 </html>
