--- a/index.html
+++ b/index.html
@@ -1,81 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Advanced AR.js Demo</title>
+<meta charset="UTF-8">
+<title>Professional AR.js Experience</title>
 
-  <!-- A-Frame -->
-  <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
+<!-- A-Frame -->
+<script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
 
-  <!-- AR.js -->
-  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/2.2.1/aframe/build/aframe-ar.js"></script>
+<!-- AR.js -->
+<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/2.2.1/aframe/build/aframe-ar.js"></script>
 
-  <style>
-    body {
-      margin: 0;
-      overflow: hidden;
-      font-family: Arial, sans-serif;
-    }
+<style>
+body {
+  margin: 0;
+  overflow: hidden;
+  font-family: Arial, sans-serif;
+}
 
-    #info {
-      position: fixed;
-      bottom: 10px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(0,0,0,0.6);
-      color: #fff;
-      padding: 8px 14px;
-      border-radius: 20px;
-      font-size: 14px;
-      z-index: 999;
-    }
-  </style>
+/* Loading screen */
+#loader {
+  position: fixed;
+  inset: 0;
+  background: #000;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  font-size: 20px;
+}
+
+/* UI Panel */
+#ui {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 10px;
+  z-index: 1000;
+}
+
+#ui button {
+  padding: 10px 16px;
+  border: none;
+  border-radius: 20px;
+  background: rgba(0,0,0,0.7);
+  color: white;
+  font-size: 14px;
+}
+</style>
 </head>
 
 <body>
 
-<div id="info">Point camera at Hiro marker</div>
+<div id="loader">Loading AR Experience...</div>
+
+<div id="ui">
+  <button onclick="rotateModel()">Rotate</button>
+  <button onclick="scaleUp()">Zoom +</button>
+  <button onclick="scaleDown()">Zoom -</button>
+  <button onclick="resetModel()">Reset</button>
+</div>
 
 <a-scene
   embedded
   arjs="sourceType: webcam; debugUIEnabled: false;"
   renderer="antialias: true; colorManagement: true;"
+  vr-mode-ui="enabled: false"
 >
 
-  <!-- ASSETS -->
-  <a-assets>
-    <a-asset-item
-      id="model"
-      src="https://cdn.aframe.io/test-models/models/RobotExpressive/RobotExpressive.glb">
-    </a-asset-item>
-  </a-assets>
+<!-- ASSETS -->
+<a-assets>
+  <a-asset-item
+    id="robot"
+    src="https://cdn.aframe.io/test-models/models/RobotExpressive/RobotExpressive.glb">
+  </a-asset-item>
+</a-assets>
 
-  <!-- MARKER -->
-  <a-marker preset="hiro" smooth="true" smoothCount="10" smoothTolerance="0.01">
+<!-- MARKER -->
+<a-marker
+  preset="hiro"
+  smooth="true"
+  smoothCount="15"
+  smoothTolerance="0.01"
+>
 
-    <!-- LIGHTS -->
-    <a-entity light="type: ambient; intensity: 1"></a-entity>
-    <a-entity light="type: directional; intensity: 1.2" position="1 2 1"></a-entity>
+  <!-- LIGHTING -->
+  <a-entity light="type: ambient; intensity: 1.2"></a-entity>
+  <a-entity light="type: directional; intensity: 1.5" position="1 3 2"></a-entity>
 
-    <!-- 3D MODEL -->
-    <a-entity
-      gltf-model="#model"
-      scale="0.4 0.4 0.4"
-      position="0 0 0"
-      rotation="0 180 0"
-      animation="property: rotation;
-                 to: 0 540 0;
-                 loop: true;
-                 dur: 8000;
-                 easing: linear">
-    </a-entity>
+  <!-- MODEL -->
+  <a-entity
+    id="mainModel"
+    gltf-model="#robot"
+    position="0 0 0"
+    rotation="0 180 0"
+    scale="0.35 0.35 0.35"
+    animation__idle="property: rotation; to: 0 540 0; loop: true; dur: 12000; easing: linear"
+  ></a-entity>
 
-  </a-marker>
+</a-marker>
 
-  <!-- CAMERA -->
-  <a-entity camera></a-entity>
+<!-- CAMERA -->
+<a-entity camera></a-entity>
 
 </a-scene>
+
+<script>
+const model = document.getElementById("mainModel");
+let scale = 0.35;
+let rotation = 180;
+
+// Remove loader when scene is ready
+document.querySelector("a-scene").addEventListener("loaded", () => {
+  document.getElementById("loader").style.display = "none";
+});
+
+// UI FUNCTIONS
+function rotateModel() {
+  rotation += 45;
+  model.setAttribute("rotation", `0 ${rotation} 0`);
+}
+
+function scaleUp() {
+  scale += 0.05;
+  model.setAttribute("scale", `${scale} ${scale} ${scale}`);
+}
+
+function scaleDown() {
+  scale = Math.max(0.1, scale - 0.05);
+  model.setAttribute("scale", `${scale} ${scale} ${scale}`);
+}
+
+function resetModel() {
+  scale = 0.35;
+  rotation = 180;
+  model.setAttribute("scale", `${scale} ${scale} ${scale}`);
+  model.setAttribute("rotation", `0 ${rotation} 0`);
+}
+</script>
 
 </body>
 </html>
