--- a/index.html
+++ b/index.html
@@ -2,143 +2,109 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Real-Time Laptop Detection (AI + Camera)</title>
+<title>Immersive Web VR Experience</title>
 
-<!-- TensorFlow.js -->
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.16.0/dist/tf.min.js"></script>
-
-<!-- COCO-SSD Model -->
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
+<!-- A-Frame -->
+<script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
 
 <style>
 body {
   margin: 0;
-  background: black;
-  overflow: hidden;
   font-family: Arial, sans-serif;
 }
-
-#video {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
-}
-
-#canvas {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-#label {
+#hint {
   position: fixed;
-  bottom: 20px;
+  top: 10px;
   left: 50%;
   transform: translateX(-50%);
-  background: rgba(0,0,0,0.7);
-  color: #00ffcc;
-  padding: 10px 20px;
+  background: rgba(0,0,0,0.6);
+  color: #fff;
+  padding: 8px 14px;
   border-radius: 20px;
-  font-size: 16px;
   z-index: 10;
-}
-
-#loader {
-  position: fixed;
-  inset: 0;
-  background: black;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 999;
-  font-size: 22px;
 }
 </style>
 </head>
 
 <body>
 
-<div id="loader">Loading AI Model...</div>
-<div id="label">Detecting objects...</div>
+<div id="hint">Look around • Walk • Click objects</div>
 
-<video id="video" autoplay muted playsinline></video>
-<canvas id="canvas"></canvas>
+<a-scene
+  background="color: #0a0a0a"
+  vr-mode-ui="enabled: true"
+  renderer="antialias: true; colorManagement: true;"
+>
 
-<script>
-const video = document.getElementById("video");
-const canvas = document.getElementById("canvas");
-const ctx = canvas.getContext("2d");
-const label = document.getElementById("label");
-const loader = document.getElementById("loader");
+  <!-- ASSETS -->
+  <a-assets>
+    <img id="sky" src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/sechelt.jpg">
+  </a-assets>
 
-let model;
+  <!-- SKY (360 VR WORLD) -->
+  <a-sky src="#sky" rotation="0 -90 0"></a-sky>
 
-// Start camera
-async function startCamera() {
-  const stream = await navigator.mediaDevices.getUserMedia({
-    video: { facingMode: "environment" },
-    audio: false
-  });
-  video.srcObject = stream;
-  return new Promise(resolve => {
-    video.onloadedmetadata = () => resolve();
-  });
-}
+  <!-- LIGHTING -->
+  <a-entity light="type: ambient; intensity: 0.8"></a-entity>
+  <a-entity light="type: directional; intensity: 1.2" position="1 3 2"></a-entity>
 
-// Load AI model
-async function loadModel() {
-  model = await cocoSsd.load();
-  loader.style.display = "none";
-  detectFrame();
-}
+  <!-- FLOOR -->
+  <a-plane
+    rotation="-90 0 0"
+    width="30"
+    height="30"
+    color="#222"
+  ></a-plane>
 
-// Detection loop
-async function detectFrame() {
-  canvas.width = video.videoWidth;
-  canvas.height = video.videoHeight;
+  <!-- OBJECTS -->
+  <a-box
+    position="0 1 -3"
+    color="#00ffc8"
+    depth="1"
+    height="1"
+    width="1"
+    animation="property: rotation; to: 0 360 0; loop: true; dur: 6000"
+  ></a-box>
 
-  const predictions = await model.detect(video);
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
+  <a-sphere
+    position="2 1.2 -4"
+    radius="0.7"
+    color="#ff4081"
+    animation="property: position; dir: alternate; dur: 2000; loop: true; to: 2 2 -4"
+  ></a-sphere>
 
-  let laptopFound = false;
+  <a-cylinder
+    position="-2 1 -4"
+    radius="0.5"
+    height="1.5"
+    color="#ffd740"
+  ></a-cylinder>
 
-  predictions.forEach(pred => {
-    if (pred.class === "laptop" && pred.score > 0.6) {
-      laptopFound = true;
+  <!-- TEXT -->
+  <a-text
+    value="Welcome to Web VR"
+    position="0 2.5 -3"
+    align="center"
+    color="#ffffff"
+    width="6"
+  ></a-text>
 
-      const [x, y, width, height] = pred.bbox;
+  <!-- CAMERA + CONTROLS -->
+  <a-entity
+    camera
+    position="0 1.6 0"
+    look-controls
+    wasd-controls="acceleration: 15"
+  >
+    <!-- Cursor for click / gaze -->
+    <a-cursor
+      fuse="true"
+      fuse-timeout="1200"
+      color="#00ffc8"
+    ></a-cursor>
+  </a-entity>
 
-      // Draw box
-      ctx.strokeStyle = "#00ffcc";
-      ctx.lineWidth = 3;
-      ctx.strokeRect(x, y, width, height);
-
-      // Draw label
-      ctx.fillStyle = "#00ffcc";
-      ctx.font = "18px Arial";
-      ctx.fillText(
-        `Laptop ${(pred.score * 100).toFixed(1)}%`,
-        x,
-        y > 20 ? y - 10 : y + 20
-      );
-    }
-  });
-
-  label.innerText = laptopFound
-    ? "Laptop detected ✅"
-    : "Show a laptop to the camera";
-
-  requestAnimationFrame(detectFrame);
-}
-
-// INIT
-(async () => {
-  await startCamera();
-  await loadModel();
-})();
-</script>
+</a-scene>
 
 </body>
 </html>
