--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Immersive Web VR Experience</title>
+<title>Immersive VR Business Website</title>
 
-<!-- A-Frame -->
 <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
 
 <style>
@@ -12,97 +11,154 @@ body {
   margin: 0;
   font-family: Arial, sans-serif;
 }
-#hint {
+#overlay {
   position: fixed;
   top: 10px;
   left: 50%;
   transform: translateX(-50%);
-  background: rgba(0,0,0,0.6);
-  color: #fff;
-  padding: 8px 14px;
-  border-radius: 20px;
+  background: rgba(0,0,0,0.65);
+  color: white;
+  padding: 10px 18px;
+  border-radius: 25px;
   z-index: 10;
+  font-size: 14px;
 }
 </style>
 </head>
 
 <body>
 
-<div id="hint">Look around • Walk • Click objects</div>
+<div id="overlay">
+  VR Business Website • Walk • Look • Click Panels
+</div>
 
 <a-scene
-  background="color: #0a0a0a"
+  background="color: #0b0b0b"
   vr-mode-ui="enabled: true"
   renderer="antialias: true; colorManagement: true;"
 >
 
-  <!-- ASSETS -->
-  <a-assets>
-    <img id="sky" src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/sechelt.jpg">
-  </a-assets>
+<!-- LIGHTING -->
+<a-entity light="type: ambient; intensity: 0.6"></a-entity>
+<a-entity light="type: directional; intensity: 1.3" position="2 4 2"></a-entity>
 
-  <!-- SKY (360 VR WORLD) -->
-  <a-sky src="#sky" rotation="0 -90 0"></a-sky>
+<!-- FLOOR -->
+<a-plane
+  rotation="-90 0 0"
+  width="50"
+  height="50"
+  color="#1a1a1a"
+></a-plane>
 
-  <!-- LIGHTING -->
-  <a-entity light="type: ambient; intensity: 0.8"></a-entity>
-  <a-entity light="type: directional; intensity: 1.2" position="1 3 2"></a-entity>
+<!-- ================= HERO SECTION ================= -->
+<a-box position="0 2 -6" width="8" height="4" depth="0.3" color="#111"></a-box>
 
-  <!-- FLOOR -->
-  <a-plane
-    rotation="-90 0 0"
-    width="30"
-    height="30"
-    color="#222"
-  ></a-plane>
+<a-text
+  value="WELCOME TO VR BUSINESS"
+  position="0 3 -5.8"
+  align="center"
+  color="#00ffd5"
+  width="12"
+></a-text>
 
-  <!-- OBJECTS -->
-  <a-box
-    position="0 1 -3"
-    color="#00ffc8"
-    depth="1"
-    height="1"
-    width="1"
-    animation="property: rotation; to: 0 360 0; loop: true; dur: 6000"
-  ></a-box>
+<a-text
+  value="An immersive website experience"
+  position="0 2.3 -5.8"
+  align="center"
+  color="#ffffff"
+  width="8"
+></a-text>
 
-  <a-sphere
-    position="2 1.2 -4"
-    radius="0.7"
-    color="#ff4081"
-    animation="property: position; dir: alternate; dur: 2000; loop: true; to: 2 2 -4"
-  ></a-sphere>
+<!-- ================= ABOUT SECTION ================= -->
+<a-box position="-10 2 -10" width="6" height="3" depth="0.3" color="#151515"></a-box>
 
-  <a-cylinder
-    position="-2 1 -4"
-    radius="0.5"
-    height="1.5"
-    color="#ffd740"
-  ></a-cylinder>
+<a-text
+  value="ABOUT US"
+  position="-10 3 -9.8"
+  align="center"
+  color="#ffd54f"
+  width="6"
+></a-text>
 
-  <!-- TEXT -->
-  <a-text
-    value="Welcome to Web VR"
-    position="0 2.5 -3"
-    align="center"
-    color="#ffffff"
-    width="6"
-  ></a-text>
+<a-text
+  value="We create immersive VR, AR and AI-powered web experiences for modern businesses."
+  position="-10 2.1 -9.8"
+  align="center"
+  color="#ffffff"
+  width="5"
+></a-text>
 
-  <!-- CAMERA + CONTROLS -->
-  <a-entity
-    camera
-    position="0 1.6 0"
-    look-controls
-    wasd-controls="acceleration: 15"
-  >
-    <!-- Cursor for click / gaze -->
-    <a-cursor
-      fuse="true"
-      fuse-timeout="1200"
-      color="#00ffc8"
-    ></a-cursor>
-  </a-entity>
+<!-- ================= SERVICES SECTION ================= -->
+<a-box position="10 2 -10" width="6" height="3" depth="0.3" color="#151515"></a-box>
+
+<a-text
+  value="SERVICES"
+  position="10 3 -9.8"
+  align="center"
+  color="#4fc3f7"
+  width="6"
+></a-text>
+
+<a-text
+  value="• VR Websites\n• AR Experiences\n• AI Vision\n• 3D Showrooms"
+  position="10 2.1 -9.8"
+  align="center"
+  color="#ffffff"
+  width="5"
+></a-text>
+
+<!-- ================= SHOWROOM OBJECTS ================= -->
+<a-box
+  position="0 1 -14"
+  color="#00ffd5"
+  animation="property: rotation; to: 0 360 0; loop: true; dur: 8000"
+></a-box>
+
+<a-sphere
+  position="3 1.2 -14"
+  radius="0.8"
+  color="#ff4081"
+></a-sphere>
+
+<a-cylinder
+  position="-3 1 -14"
+  radius="0.6"
+  height="1.5"
+  color="#ffd54f"
+></a-cylinder>
+
+<!-- ================= CONTACT SECTION ================= -->
+<a-box position="0 2 -20" width="7" height="3" depth="0.3" color="#111"></a-box>
+
+<a-text
+  value="CONTACT US"
+  position="0 3 -19.8"
+  align="center"
+  color="#81c784"
+  width="6"
+></a-text>
+
+<a-text
+  value="Email: demo@vrbusiness.com\nPhone: +91 90000 00000"
+  position="0 2.1 -19.8"
+  align="center"
+  color="#ffffff"
+  width="6"
+></a-text>
+
+<!-- ================= CAMERA ================= -->
+<a-entity
+  camera
+  position="0 1.6 2"
+  look-controls
+  wasd-controls="acceleration: 18"
+>
+  <a-cursor
+    fuse="true"
+    fuse-timeout="1000"
+    color="#00ffd5"
+  ></a-cursor>
+</a-entity>
 
 </a-scene>
 
